# PyGuard

./: LICENSE  PyGuard.toml  README.md  setup.cfg
.github/workflows/: codeql-analysis.yml
src/PyGuard/: PyGuard.py
