[metadata]
name = PyGuard
version = 0.0.1
author = Moros0741
author_email = moros@knightowl.gg/
description = A package for interacting with the Discord Guardian System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Discord-Guardian-System/PyGuard
project_urls =
    Bug Tracker = https://github.com/Discord-Guardian-System/PyGuard/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src